# board

./: .dockerignore  .gitignore  Caddyfile  Developer Guide & Pitfalls ai gen'd.md  Dockerfile  ISSUES.md  README.md  board.md  compression.md  docker-compose.yml  endpoints.md  files.md  mise.toml  notes.md  rustboard.md
goboard/: .gitignore  AGENTS.md  build.go  config.go  files.go  fs.go  go.mod  go.sum  goboard.toml  handlers_diag.go  handlers_upload.go  hub.go  main.go  middleware.go  net.go  router.go  rsrc_windows_386.syso  rsrc_windows_amd64.syso  system.go
goboard/docs/: ARCHITECTURE.md
goboard/editor-src/: index.js  package-lock.json  package.json
goboard/static/: app.css  app.js  files.css  files.html  files.js  index.html
goboard/winres/: about.txt  literal.txt  winres.json
rustboard/: .gitignore  Cargo.toml  README.md  build.rs  default.toml  development_log.md
rustboard/docs/: implementation_plan.md
rustboard/src/: config.rs  fs_handler.rs  handlers.rs  hub.rs  main.rs  system.rs
rustboard/testing/: memory.md  static.tar.zst
rustboard/testing/static_dist/: app.css.zst  app.js.zst  index.html.zst
rustboard/testing/static_dist/fonts/: inter-regular.woff2.zst  inter-semibold.woff2.zst
rustboard/winres/: test.json  winres.json
rustboard/winres/backup/: winres.json
static/: app.css  app.js  index.html
web/: package-lock.json
