[package]
name = "rustboard"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8", features = ["ws", "multipart", "http1", "http2", "json"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "io-util", "net", "time", "sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1"
notify = "8"
tracing = "^0"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tower-http = { version = "0.6", features = ["cors", "trace", "fs", "limit", "catch-panic"] }
zip = { version = "8", default-features = false, features = ["deflate"] }
mime_guess = "2"
sysinfo = "^0"
uuid = { version = "1", features = ["v4"] }
futures-util = "^0"
chrono = { version = "^0", default-features = false, features = ["clock", "serde"] }
flate2 = "1"
bytes = "1"
once_cell = "1"
dashmap = "6"
walkdir = "2"

[build-dependencies]
zip = { version = "8", default-features = false, features = ["deflate"] }
walkdir = "2"